Fix profile icon alignment

--- a/dapp/src/components/page/home/availablecredentials.scss
+++ b/dapp/src/components/page/home/availablecredentials.scss
@@ -38,6 +38,10 @@
   overflow: auto;
 }
 
+.icon-container {
+  width: 30px;
+}
+
 // status tags
 .status-tag {
   display: inline-block;
